tests/c_programs/switch/invalid_parse/declaration_after_label.c
int main(void) {
int no_body = 1;
    switch (1)
      case 1:
        int whatever = 0;

    return no_body;
}